# hydroxide

./: .gitignore  Cargo.toml  tailwind.config.js
.github/workflows/: rust.yml
.sqlx/: query-22066b8bce3455edd66d1fd403f1405fd190a01a72449a3eb8caa347c4f1a954.json  query-5b94b1e87004f21cdaf07ce8ca640997b5956e795421abeb9f592f5319143bd3.json  query-cab6074bba679ca46b523f5bda68013e5254415fc7f68c031abfdf0b40ed593b.json
src/: blogs.html  create_post.html  index.html  main.rs  navbar.html  posts.html  sign_in.html  sign_up.html
static/: javascript.js  navbar.html  styles.css  styles.tailwind.css
