[package]
name = "hydroxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros", "headers"] }
axum-extra = { version = "0.8.0", features = ["cookie", "cookie-private"] }
femme = "2.2.1"
jsonwebtoken = "9.1.0"
log = "0.4.20"
once_cell = "1.18.0"
serde = "1.0.190"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["full"] }
rand = "0.8.5"
base64 = "0.21.5"
sha3 = { version = "0.10.8", features = ["asm"] }
ammonia = "3.3.0"
comrak = "0.19.0"
tokio-stream = { version = "0.1.14", features = ["full"] }
upon = "0.8.0"
tower-http = { version = "0.4.4", features = ["fs"] }
axum_typed_multipart = "0.10.1"

[profile.release]
strip = true
lto = true
